<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ambient_light"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/light_lux"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="0"
                        android:textSize="11dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_light"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/filter_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="0"
                        android:textSize="11dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter_alpha"
                        android:textSize="11dp" />

                    <TextView
                        android:id="@+id/filter_alpha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="0"
                        android:textSize="11dp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Switch
            android:id="@+id/filter_switch"
            style="@style/option_title"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/filter_enable"
            android:switchPadding="6dp"
            android:textColor="?android:colorAccent" />

        <TextView
            style="@style/option_desc"
            android:layout_marginBottom="0dp"
            android:text="@string/automatic_brightness_config" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <Switch
                    android:id="@+id/auto_adjustment"
                    style="@style/option_title"
                    android:text="@string/auto_adjustment" />

                <TextView
                    style="@style/option_desc"
                    android:text="@string/auto_adjustment_desc" />

                <TextView
                    style="@style/option_title"
                    android:text="@string/brightness_offset" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/brightness_offset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="40"
                        android:min="0"
                        android:progress="50" />

                    <TextView
                        android:id="@+id/brightness_offset_text"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%" />
                </LinearLayout>

                <Switch
                    android:layout_marginTop="20dp"
                    android:id="@+id/landscape_optimize"
                    style="@style/option_title"
                    android:text="@string/landscape_optimize" />

                <TextView
                    style="@style/option_desc"
                    android:text="@string/landscape_optimize_desc" />

                <Switch
                    android:id="@+id/dynamic_optimize"
                    style="@style/option_title"
                    android:text="@string/dynamic_optimize" />

                <TextView
                    android:layout_marginBottom="4dp"
                    style="@style/option_desc"
                    android:text="@string/dynamic_optimize_desc" />

                <LinearLayout
                    android:layout_marginBottom="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <SeekBar
                        android:id="@+id/dynamic_optimize_limit"
                        android:max="300"
                        android:min="0"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/dynamic_optimize_limit_text"
                        android:layout_marginLeft="6dp"
                        android:textAlignment="center"
                        android:text="0Lux"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Switch
                    android:layout_marginTop="20dp"
                    android:id="@+id/smooth_brightness"
                    style="@style/option_title"
                    android:text="@string/smooth_brightness" />

                <TextView
                    android:layout_marginBottom="0dp"
                    style="@style/option_desc"
                    android:text="@string/smooth_brightness_desc" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            style="@style/option_desc"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/other_config" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <Switch
                    android:id="@+id/brightness_controller"
                    style="@style/option_title"
                    android:text="@string/brightness_controller" />

                <TextView
                    style="@style/option_desc"
                    android:text="@string/brightness_controller_desc" />

                <Switch
                    android:id="@+id/lock_off"
                    style="@style/option_title"
                    android:text="@string/lock_off" />

                <TextView
                    style="@style/option_desc"
                    android:text="@string/lock_off_desc" />

                <Switch
                    android:visibility="gone"
                    android:id="@+id/hardware_acceleration"
                    style="@style/option_title"
                    android:text="@string/hardware_acceleration" />

                <TextView
                    android:visibility="gone"
                    style="@style/option_desc"
                    android:text="@string/hardware_acceleration_desc" />

                <Switch
                    android:id="@+id/hide_in_recent"
                    style="@style/option_title"
                    android:text="@string/hide_in_recent" />

                <TextView
                    style="@style/option_desc"
                    android:text="@string/hide_in_recent_desc" />

                <Switch
                    android:id="@+id/hide_start_icon"
                    android:text="@string/hide_start_icon"
                    style="@style/option_title" />

                <TextView
                    style="@style/option_desc"
                    android:layout_marginBottom="0dp"
                    android:text="@string/hide_start_icon_desc" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            style="@style/option_desc"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/help_infos" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/option_title"
                    android:text="@string/brightness_control" />

                <TextView
                    style="@style/option_desc"
                    android:layout_marginBottom="0dp"
                    android:text="@string/brightness_control_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!--声明-->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/option_title"
                    android:text="@string/statement" />

                <TextView
                    style="@style/option_desc"
                    android:text="@string/statement_content" />

                <TextView
                    style="@style/option_desc"
                    android:layout_marginBottom="0dp"
                    android:autoLink="all"
                    android:gravity="end"
                    android:text="@string/author" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>