<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SampleEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:orientation="vertical">

            <TextView
                style="@style/option_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sample_chart" />

            <com.omarea.filter.SampleDataView
                android:id="@+id/sample_chart"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/option_title"
                android:layout_marginTop="10dp"
                android:text="@string/sample_desc_title" />

            <TextView
                style="@style/option_desc"
                android:text="@string/sample_desc" />
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/smaple_clear"
                android:text="@string/smaple_clear"
                android:textSize="12dp"
                style="@android:style/Widget.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/smaple_add"
        android:src="@drawable/add"
        android:layout_margin="20dp"
        android:layout_gravity="right|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>